Fix button and Arrow alignment

--- a/src/components/Item.css
+++ b/src/components/Item.css
@@ -5,6 +5,7 @@
   background-repeat: no-repeat;
   background-size: cover;
   display: flex;
+  flex-direction: column;
   justify-content: center;
 }
 
@@ -33,6 +34,8 @@
   margin-bottom: 5%;
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .item__buttons {
@@ -42,6 +45,8 @@
 .item__expand {
   color: #fff;
   width: 100%;
+  margin: 0 auto;
   margin-top: 3%;
+  display: flex;
   justify-content: center;
 }
